Refaktorert til å hente autentisert bruker utenfor reactive kontekst. #deploy-backend-dev